syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.auth";
//option go_package = "auth";
import "google/protobuf/empty.proto";
package model;

service AuthService {
    rpc Validate (ValidateRequest) returns (google.protobuf.Empty) {}
}

message ValidateRequest {
    string token = 2;
}